# Global-Text-Indexer

./: FolderTextIndexer.sln
FolderTextIndexer/: CMakeLists.txt  FolderTextIndexer.pri  FolderTextIndexer.pro  FolderTextIndexer.qrc  FolderTextIndexer.vcxproj  FolderTextIndexer.vcxproj.filters  action_object.cpp  action_object.h  add_dir_worker.cpp  add_dir_worker.h  add_directory_dialog.cpp  add_directory_dialog.h  add_directory_dialog.ui  details_dialog.cpp  details_dialog.h  details_dialog.ui  exception_occured_dialog.cpp  exception_occured_dialog.h  exception_occured_dialog.ui  main.cpp  main_window.cpp  main_window.h  main_window.ui  pattern_lookup_worker.cpp  pattern_lookup_worker.h  trigram_util.cpp  trigram_util.h
FolderTextIndexer/GeneratedFiles/: qrc_FolderTextIndexer.cpp  ui_add_directory_dialog.h  ui_details_dialog.h  ui_exception_occured_dialog.h  ui_main_window.h
